--- a/3.1/3.1.3_代⼊を導⼊することのコスト.ipynb
+++ b/3.1/3.1.3_代⼊を導⼊することのコスト.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.1.3 代⼊を導⼊することのコスト\n",
-    "\n",
-    "setを使う場合"
+    "# 3.1.3 代⼊を導⼊することのコスト\n"
    ]
   },
   {
@@ -562,20 +560,223 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 30\r\n",
+      " 20\r\n",
+      " 10\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "((new-account 'nyan 'deposit) 10)\n",
+    "((new-account 'nyanko 'withdraw) 10)\n",
+    "((account 'nyanko 'withdraw) 10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "共有できてそう?\n"
+    "だめだ、accountの方でもnew-accountのパスワード使えるようになっちゃった。\n",
+    "\n",
+    "そういうことじゃないっぽい_(⌒(_´-ω-`)_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### パスワード部分だっけwrapしてみる"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " make-joint\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "(define (make-joint account password new-password)\n",
+    "  (define (wrap pass arg)\n",
+    "    (if \n",
+    "     (eq? pass new-password)\n",
+    "     (account password arg)\n",
+    "     (lambda (_) \"invalid password\")\n",
+    "     ))\n",
+    "wrap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " account\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "(define account (make-account 'nyan 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " wrap-account\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "(define wrap-account (make-joint account 'nyan 'nyanko))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \"invalid password\"\r\n",
+      " 10\r\n",
+      " 0\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "((wrap-account 'nyan 'deposit) 10)\n",
+    "((wrap-account 'nyanko 'deposit) 10)\n",
+    "((account 'nyan 'withdraw) 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ex 3.8\n",
+    "\n",
+    "1.1.3 節で評価モデルを定義したときに、\n",
+    "式を評価する最初のステップはその部分式を評価することだと述べた。 \n",
+    "しかし、部分式を評価する順番 (例えば、左から右、または右から左)については規定しなかった。\n",
+    "代⼊を導⼊すると、⼿続きの引数を評価する順番によって結果が変わるということが起こりえる。  \n",
+    "単純な⼿続き f を定義して、次の式\n",
+    "```\n",
+    "(+ (f 0) (f 1))\n",
+    "```\n",
+    "を評価する際に、+ の引数の評価順が左から右であれば 0 を返し、右から左であれば 1 を返すようにせよ。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ひたすら一個分評価を遅延して返す関数作った"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " queue-1\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "(define (queue-1)\n",
+    "  (define queue 0)\n",
+    "  (lambda (x) \n",
+    "    (let ((top queue))\n",
+    "    (begin\n",
+    "      (set! queue x)\n",
+    "      top\n",
+    "    )))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " f\r\n",
+      " 0\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "(define f (queue-1))\n",
+    "(+ (f 0) (f 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " g\r\n",
+      " 1\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "(define g (queue-1))\n",
+    "(+ (g 1) (g 0))"
+   ]
   }
  ],
  "metadata": {
